--- a/src/components/shake/shake.css
+++ b/src/components/shake/shake.css
@@ -93,6 +93,8 @@ border-radius: 102.5px;
     outline:none;
     cursor: pointer;
     text-align: center;
+    top: 70%;
+
 }
 .next-text{
     font-family: 'Team';
@@ -374,6 +376,16 @@ border-radius: 102.5px;
     width: 100%;
     height: 50vh;
     bottom: 0;
+}
+.div8{
+
+color: #0F5776 34%, #0F5776 99%, #0F5776 0%;
+position: absolute;
+left: 68.18%;
+right: 26.82%;
+top: 42.41%;
+bottom: 41.02%;
+
 }
 
 
